--- a/app/src/main/res/layout/activity_splash_screen_text.xml
+++ b/app/src/main/res/layout/activity_splash_screen_text.xml
@@ -5,14 +5,14 @@
     android:id="@+id/fon"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.arribeal.animap.SplashScreenText">
+    tools:context="com.example.arribeal.animap.SplashScreenText"
+    android:background="@drawable/bleu">
 
     <TextView
         android:id="@+id/textViewExplication"
-        android:layout_width="352dp"
-        android:layout_height="418dp"
+        android:layout_width="360dp"
+        android:layout_height="457dp"
         android:text="
-        Cette application a pour but de lister les animaux présents sur chaque continent.
 
    Diverses informations seront disponibles sur chaque animal comme par exemple l'esperance de vie, le poids et la taille moyenne ou encore si l'espèce est en voie d'extinction...
 
@@ -20,11 +20,12 @@
 
 Cette application à été créée dans le cadre d'un projet d'une licence professionnelle SMIN à l'IUT1 de Grenoble.  "
         android:textColor="@android:color/black"
-        android:textSize="20sp"
+        android:textSize="23sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.254" />
 
     <Button
         android:id="@+id/buttonPasser"
@@ -32,8 +33,19 @@ Cette application à été créée dans le cadre d'un projet d'une licence profe
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
+        android:background="@drawable/buttondesign"
         android:text="Passer"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="217dp"
+        android:layout_height="114dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@drawable/uga" />
 </android.support.constraint.ConstraintLayout>
