--- a/app/src/main/res/layout/activity_splash_screen_earth.xml
+++ b/app/src/main/res/layout/activity_splash_screen_earth.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.arribeal.animap.SplashScreenEarth">
+    tools:context="com.example.arribeal.animap.SplashScreenEarth"
+    android:background="@drawable/bleu">
 
     <ImageView
         android:id="@+id/imageView"
