--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -4,30 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.arribeal.animap.MenuPrincipal"
-    android:background="@drawable/bleu">
+    android:background="@drawable/bleu"
+    tools:context="com.example.arribeal.animap.MenuPrincipal">
 
     <Button
         android:id="@+id/buttonContinent"
-        android:layout_width="123dp"
-        android:layout_height="80dp"
+        android:layout_width="230dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="132dp"
+        android:background="@drawable/buttondesignmenucontinent"
         android:text="Continent"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.293" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonAutourDeMoi"
-        android:layout_width="123dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="104dp"
-        android:drawableLeft="@drawable/loupe"
+        android:layout_width="230dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="132dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/buttondesignmenugeolocalisation"
         android:text="Autour de moi"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonContinent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonContinent"
+        app:layout_constraintVertical_bias="0.971"
+        tools:ignore="RtlCompat" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="77dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="283dp" />
 </android.support.constraint.ConstraintLayout>
