--- a/app/src/main/res/drawable/buttondesignmenucontinent.xml
+++ b/app/src/main/res/drawable/buttondesignmenucontinent.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:topLeftRadius="90dp"
-        android:topRightRadius="0dp"
+        android:topLeftRadius="0dp"
+        android:topRightRadius="90dp"
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="90dp"
         />
     <solid
-        android:color="#2A0069"
+        android:color="#1f6b89"
         />
     <padding
         android:left="0dp"
@@ -21,6 +21,6 @@
         />
     <stroke
         android:width="4dp"
-        android:color="#872222"
+        android:color="#00ffe1"
         />
 </shape>
