--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -12,7 +12,7 @@
         android:layout_width="230dp"
         android:layout_height="60dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="160dp"
         android:background="@drawable/buttondesignmenucontinent"
         android:text="Continent"
         android:textColor="@android:color/white"
@@ -26,17 +26,18 @@
         android:id="@+id/buttonAutourDeMoi"
         android:layout_width="230dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="132dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginBottom="160dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/buttondesignmenugeolocalisation"
         android:text="Autour de moi"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonContinent"
-        app:layout_constraintVertical_bias="0.971"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="RtlCompat" />
 
     <android.support.constraint.Guideline
@@ -44,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="77dp" />
+        app:layout_constraintGuide_begin="-22dp" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline2"
@@ -52,4 +53,5 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="283dp" />
+
 </android.support.constraint.ConstraintLayout>
