--- a/app/src/main/res/layout/activity_splash_screen_earth.xml
+++ b/app/src/main/res/layout/activity_splash_screen_earth.xml
@@ -27,4 +27,21 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.103"></ImageView>
+
+    <ProgressBar
+        android:id="@+id/progressBarDown"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="300dp"
+        android:layout_height="21dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.919"
+        tools:ignore="RtlCompat" />
+
 </android.support.constraint.ConstraintLayout>
